libs/pdfium/android/include/fpdf_save.h


typedef struct FPDF_FILEWRITE_ {
  int version;
  int (*WriteBlock)(struct FPDF_FILEWRITE_* self,
                    const void* data,
                    unsigned long size);
} FPDF_FILEWRITE;
#define FPDF_INCREMENTAL (1 << 0)
FPDF_EXPORT FPDF_BOOL FPDF_CALLCONV FPDF_SaveAsCopy(FPDF_DOCUMENT document,
                                                    FPDF_FILEWRITE* file_write,
                                                    FPDF_DWORD flags);